--- a/app/javascript/src/structure/_vars.scss
+++ b/app/javascript/src/structure/_vars.scss
@@ -4,6 +4,7 @@ $max-width: 1200px;
 $default-width: 84vw;
 
 // flex gap
+$gap-xs: 5px;
 $gap-sm: 15px;
 $gap: 20px;
 
